--- a/docs/02.API-REFERENCE.md
+++ b/docs/02.API-REFERENCE.md
@@ -3062,7 +3062,7 @@ Set the prototype of the specified object.
 
 ```c
 jerry_value_t
-jerry_get_prototype (const jerry_value_t obj_val,
+jerry_set_prototype (const jerry_value_t obj_val,
                      const jerry_value_t proto_obj_val);
 ```
 
